Fixed Killfeed Icon Stretching

--- a/code/styles/_killfeed.scss
+++ b/code/styles/_killfeed.scss
@@ -44,7 +44,7 @@ KillFeedEntry {
 
 	.icon {
 		width: 100px;
-		height: 50px;
+		height: 100px;
 		background-size: 100%;
 		background-image-tint: red;
 	}
